<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>CSSE376-HW3</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
<!--    <repositories>-->
<!--        <repository>-->
<!--            <name>ObjectWeb Repository</name>-->
<!--            <id>ow</id>-->
<!--            <url>https://repository.ow2.org/</url>-->
<!--        </repository>-->
<!--        <repository>-->
<!--            <id>central</id>-->
<!--            <url>https://repo.maven.apache.org/maven2</url>-->
<!--        </repository>-->
<!--    </repositories>-->
        <repositories>
            <repository>
                <id>central</id>
                <url>https://repo1.maven.org/maven2/</url>
            </repository>
        </repositories>
    <dependencies>
<!--        <dependency>-->
<!--            <groupId>org.ow2.asm</groupId>-->
<!--            <artifactId>asm</artifactId>-->
<!--            <version>9.6</version>-->
<!--        </dependency>-->
<!--        &lt;!&ndash; https://mvnrepository.com/artifact/net.sourceforge.plantuml/plantuml &ndash;&gt;-->
<!--        &lt;!&ndash; https://mvnrepository.com/artifact/net.sourceforge.plantuml/plantuml &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>net.sourceforge.plantuml</groupId>-->
<!--            <artifactId>plantuml</artifactId>-->
<!--            <version>8059</version>-->
<!--        </dependency>-->
    </dependencies>
</project>